Causeview Package Complete/ant script/retrieveUnpackaged/objects/Event_Registration__c.object
<CustomObject>
    <description>Causeview - Registrations links individuals to events and to a transaction.</description>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <description>Email Address of the Attendee</description>
        <label>Attendee Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_First_Name__c</fullName>
        <label>Attendee First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_Last_Name__c</fullName>
        <label>Attendee Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Check_In_Time__c</fullName>
        <description>Time guest checked into event</description>
        <inlineHelpText>Time guest checked into event</inlineHelpText>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <description>Confirmation number provided to constituent upon successful registration.</description>
        <externalId>true</externalId>
        <inlineHelpText>Confirmation number provided to constituent upon successful registration.</inlineHelpText>
        <label>Confirmation Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Event associated to the event registration</description>
        <label>Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guest_Names_Pending__c</fullName>
        <description>Number of guest names pending for registration</description>
        <formula>Transaction__r.Attendee_Names_Pending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of guest names pending for registration</inlineHelpText>
        <label>Guest Names Pending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_Registration_URL__c</fullName>
        <description>Parameters used for guest registration URL.  Field is merged into guest registration email.</description>
        <formula>IF(  Primary_Registrant__c  = TRUE, 
&quot;qty=&quot; &amp; TEXT(  Transaction__r.Total_Attendees_Purchased__c  - 1) &amp; &quot;&amp;Transaction=&quot; &amp; Transaction__r.Id &amp; &quot;&amp;Event=&quot; &amp; Event__r.Id &amp; &quot;&amp;Primary=&quot; &amp; Transaction__r.Constituent__r.Id &amp; &quot;&amp;AccountId=&quot; &amp;  $Setup.App_Settings__c.CV_Account_Id__c &amp; &quot;&amp;OrgName=&quot; &amp;   $Organization.Name &amp; &quot;&amp;EventName=&quot; &amp;    Event__r.Name  , 
&quot;&quot;)</formula>
        <inlineHelpText>Parameters used for guest registration URL.  Field is merged into guest registration email.</inlineHelpText>
        <label>Guest Registration URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest of</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Registrations (Guest of)</relationshipLabel>
        <relationshipName>Event_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <description>Individual related to event registration</description>
        <label>Registrant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <formula>IF(AND(Transaction__r.Total_Attendees_Purchased__c &gt; 0,  Primary_Registrant__c = TRUE),Transaction__r.Total_Attendees_Purchased__c - 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the primary guest registration.  A method to link all related free event registration together.</description>
        <inlineHelpText>Parent Event Registration; this generally belongs to the primary guest.</inlineHelpText>
        <label>Parent Registration</label>
        <referenceTo>Event_Registration__c</referenceTo>
        <relationshipLabel>Guest Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Payment Object</description>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Registrant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Registrant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <description>Date of registration</description>
        <label>Registration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Notes__c</fullName>
        <description>Notes related to the Individual and their registration to the event.</description>
        <label>Registration Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Email_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value is used as part of the criteria for triggering the workflow to send an email confirmation to the registrant.</description>
        <inlineHelpText>Checking this box will email the confirmation to the registrant.</inlineHelpText>
        <label>Send Email Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sign_In_QR_Code__c</fullName>
        <formula>IMAGE(&quot;https://chart.googleapis.com/chart?cht=qr&amp;chs=177x177&amp;chl=&quot;&amp;Id , &quot;QR Code&quot;)</formula>
        <label>Sign In QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swapped Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <description>Transaction approved amount</description>
        <formula>Transaction__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Transaction approved amount (money received)</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <description>Transaction SF ID.  Used for registration lookup.</description>
        <formula>Transaction__r.Id</formula>
        <label>Transaction ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction associated to the event registration.  Applicable to events with paid fee.</description>
        <label>Transaction</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sysGuestEmailSent__c</fullName>
        <description>Date the Guest email was sent.  Used as a condition as part of the Guest Email workflow.</description>
        <label>_sysGuestEmailSent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sysLastTransactionUpdate__c</fullName>
        <description>Date defines when the related Transaction, Allocation or Payment was last updated.  This enables workflows to fire if dependent on Transaction values.</description>
        <label>_sysLastTransactionUpdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sysSendEmailConfirmation__c</fullName>
        <description>Defines date when email confirmation was sent - applies to free event registrations.</description>
        <label>_sysSendEmailConfirmation</label>
        <type>Date</type>
    </fields>
    <label>Event Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Individual__c</columns>
        <columns>Transaction_Amount__c</columns>
        <columns>Registration_Date__c</columns>
        <columns>sysGuestEmailSent__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Guests__c</columns>
        <columns>Primary_Registrant__c</columns>
        <columns>Guest_of__c</columns>
        <columns>Transaction__c</columns>
        <columns>Attendee_First_Name__c</columns>
        <columns>Attendee_Email__c</columns>
        <columns>Attendee_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{0000000}</displayFormat>
        <label>Registration No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>